add script and style

--- a/navegation/index.html
+++ b/navegation/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
 </head>
+<style>
+    
+</style>
 <body>
     <nav>
         <a href="">Menu 1</a>
         <a href="">Menu 2</a>
     </nav>
+
+    <script>
+
+    </script>
 </body>
 </html>
